--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   test:
-    if: github.event.pull_request.head.ref.startsWith('feature/') && github.event.pull_request.base.ref == 'develop'
+    if: github.event.pull_request.head.ref.startsWith('features/') && github.event.pull_request.base.ref == 'develop'
     runs-on: windows-latest
 
     strategy:
