--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,6 @@ on:
 
 jobs:
   test:
-    if: github.event.pull_request.head.ref.startsWith('features/') && github.event.pull_request.base.ref == 'develop'
     runs-on: windows-latest
 
     strategy:
@@ -33,4 +32,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: coverage-report
-          path: coverage.txt
+          path: coverage/
